newclay/test/Compiler/Propagation/Fail/RefLocal/main.clay

define main;
overload main() {
    var x = true;
    return ref x;
}

